# PZip

./: .gitignore  CMakeLists.txt  Makefile
include/: File.hh  File.hpp  Huffman.hpp  Result.hpp
src/: main.cpp
